Notice & Navbar complete

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,12 @@
         <a class="nav-link" href="/services">Prestations</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/customers">Clients</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/quotations">Devis</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/invoices">Facture</a>
       </li>
       <li class="nav-item">
