--- a/app/views/wares/_form_edit.html.erb
+++ b/app/views/wares/_form_edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @ware, local: true, class: 'form-group') do |form| %>
+<%= form_with(model: @ware, local: true, class: 'form-group', remote: true) do |form| %>
   <div class="form">
     <div class="row">
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
