--- a/app/views/wares/_form.html.erb
+++ b/app/views/wares/_form.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Project') %>
-        <%= form.select(:project_id, Project.all.collect{|project| [project.customer.name+ project.id.to_s, project.id]}, {}, {class: 'form-control'})%>
+        <%= form.select(:project_id, Project.all.collect {|project| ['#' + project.id.to_s + ' ' + project.customer.name, project.id]}, {:include_blank => true}, {class: 'form-control'}) %>
       </div>
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Invoice') %>
@@ -12,7 +12,7 @@
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Customer') %>
-        <%= form.select(:customer_id, Customer.all.collect{|customer| [customer.name, customer.id]}, {}, {class: 'form-control'})%>
+        <%= form.select(:customer_id, Customer.all.collect {|customer| [customer.name, customer.id]}, {:include_blank => true}, {class: 'form-control'}) %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
