--- a/app/views/wares/_form_edit.html.erb
+++ b/app/views/wares/_form_edit.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Project') %>
-        <%= form.select(:project_id, Project.all.collect{|project| [project.customer.name+ project.id.to_s, project.id]}, {}, {class: 'form-control'})%>
+        <%= form.select(:project_id, Project.all.collect {|project| ['#' + project.id.to_s + ' ' + project.customer.name, project.id]}, {:include_blank => true}, {class: 'form-control'}) %>
       </div>
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Invoice') %>
@@ -12,11 +12,11 @@
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Customer') %>
-        <%= form.select(:customer_id, Customer.all.collect{|customer| [customer.name, customer.id]}, {}, {class: 'form-control'})%>
+        <%= form.select(:customer_id, Customer.all.collect {|customer| [customer.name, customer.id]}, {:include_blank => true}, {class: 'form-control'}) %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Quotation')%>
+        <%= form.label t('Quotation') %>
         <%= form.text_field :quotation_id, class: "form-control" %>
       </div>
 
@@ -36,7 +36,7 @@
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Provider discount')%>
+        <%= form.label t('Provider discount') %>
         <%= form.text_field :provider_discount, class: "form-control" %>
       </div>
 
@@ -52,7 +52,7 @@
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Status') %>
-        <%= form.select(:status, Ware.statuses.keys{|status| [status.value,status.value]}, {}, {class: 'form-control'})%>
+        <%= form.select(:status, Ware.statuses.keys {|status| [status.value, status.value]}, {}, {class: 'form-control'}) %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
