--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+
 .navbar {
   margin-bottom: 1em;
 }
@@ -7,6 +8,7 @@
   max-width: 98%;
   margin: auto;
 }
+
 #notice {
   position: absolute;
   text-align: center;
@@ -14,7 +16,7 @@
 }
 
 .form-control {
-  width:100%;
+  width: 100%;
 }
 
 .createButton {
@@ -24,4 +26,22 @@
 
 .table tr {
   cursor: pointer;
+}
+
+.date-picker {
+  width: 30%;
+  margin-right: 1em;
+}
+
+.picker-container {
+  display: -webkit-box;
+}
+
+.time-picker {
+  width: 45%;
+  margin-right: 1em;
+}
+
+.picker-container {
+  display: -webkit-box;
 }
