--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,8 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Customers</h1>
+<h2>Clients</h2>
 
-<table>
+<%= render 'customers/new' %>
+
+<h5>Listing</h5>
+
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -19,7 +23,7 @@
 
   <tbody>
     <% @customers.each do |customer| %>
-      <tr>
+    <tr data-link="<%= edit_customer_path customer %>">
         <td><%= customer.name %></td>
         <td><%= customer.mail %></td>
         <td><%= customer.tva_record %></td>
@@ -28,14 +32,15 @@
         <td><%= customer.cp %></td>
         <td><%= customer.locality %></td>
         <td><%= customer.country %></td>
-        <td><%= link_to 'Show', customer %></td>
-        <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
-        <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <button type="button" class="close" aria-label="Close">
+          <span aria-hidden="true">
+            <%= link_to 'X', customer, method: :delete, data: {confirm: 'Are you sure?'} %>
+          </span>
+          </button>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
 <br>
-
-<%= link_to 'New Customer', new_customer_path %>
