--- a/app/views/wares/_form.html.erb
+++ b/app/views/wares/_form.html.erb
@@ -3,21 +3,12 @@
     <div class="row">
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Project') %>
-        <%= form.select(:project_id, Project.all.collect {|project| ['#' + project.id.to_s + ' ' + project.customer.name, project.id]}, {:include_blank => true}, {class: 'form-control'}) %>
+        <%= form.select(:project_id, Project.all.collect {|project| [project.name.to_s + ' - ' + project.customer.name, project.id]}, {:include_blank => true}, {class: 'form-control'}) %>
       </div>
+
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Invoice') %>
         <%= form.text_field :invoice_id, class: "form-control" %>
-      </div>
-
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Customer') %>
-        <%= form.select(:customer_id, Customer.all.collect {|customer| [customer.name, customer.id]}, {:include_blank => true}, {class: 'form-control'}) %>
-      </div>
-
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Quotation')%>
-        <%= form.text_field :quotation_id, class: "form-control" %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
@@ -31,13 +22,30 @@
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Quantity') %>
-        <%= form.number_field :quantity, class: "form-control" %>
+        <%= form.label t('Status') %>
+        <%= form.select(:status, Ware.statuses.keys{|status| [status.value,status.value]}, {}, {class: 'form-control'})%>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Provider discount')%>
         <%= form.text_field :provider_discount, class: "form-control" %>
+      </div>
+
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Customer') %>
+        <%= form.select(:customer_id, Customer.all.collect {|customer| [customer.name, customer.id]}, {:include_blank => true}, {class: 'form-control'}) %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Quotation')%>
+        <%= form.text_field :quotation_id, class: "form-control" %>
+      </div>
+
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Quantity') %>
+        <%= form.number_field :quantity, class: "form-control" %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
@@ -50,10 +58,6 @@
         <%= form.text_field :unit_price, class: "form-control" %>
       </div>
 
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Status') %>
-        <%= form.select(:status, Ware.statuses.keys{|status| [status.value,status.value]}, {}, {class: 'form-control'})%>
-      </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
         <%= form.label t('TVA rate') %>
