--- a/app/views/quotations/edit.html.erb
+++ b/app/views/quotations/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', quotation: @quotation %>
 
 <%= link_to 'Show', @quotation %> |
-<%= link_to 'Back', quotations_path %>
+<%= link_to 'Retour', quotations_path %>
