--- a/app/views/invoices/edit.html.erb
+++ b/app/views/invoices/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', invoice: @invoice %>
 
 <%= link_to 'Show', @invoice %> |
-<%= link_to 'Back', invoices_path %>
+<%= link_to 'Retour', invoices_path %>
