--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Customer</h1>
+<h3>Edition Client</h3>
 
 <%= render 'form', customer: @customer %>
 
-<%= link_to 'Show', @customer %> |
 <%= link_to 'Retour', customers_path %>
