--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -4,17 +4,17 @@
 
 <h5>Listing</h5>
 
-<table class="table table-hover">
-  <thead>
+<table class="table table-hover table-striped">
+  <thead class=thead-dark>
     <tr>
-      <th>Name</th>
-      <th>Mail</th>
-      <th>Tva record</th>
-      <th>Street</th>
-      <th>Number</th>
-      <th>Cp</th>
-      <th>Locality</th>
-      <th>Country</th>
+      <th><%= t('Name') %></th>
+      <th><%= t('Mail') %></th>
+      <th><%= t('TVA record') %></th>
+      <th><%= t('Street') %></th>
+      <th><%= t('Number') %></th>
+      <th><%= t('Cp') %></th>
+      <th><%= t('Locality') %></th>
+      <th><%= t('Country') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
