--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -4,8 +4,8 @@
 
 <h5>Listing</h5>
 
-<table class="table table-hover">
-  <thead>
+<table class="table table-hover table-striped">
+  <thead class=thead-dark>
   <tr>
     <th><%= t('Project') %></th>
     <th><%= t('Invoice') %></th>
