--- a/app/views/wares/edit.html.erb
+++ b/app/views/wares/edit.html.erb
@@ -1,5 +1,5 @@
 <h3>Edition Marchandise</h3>
 
-<%= render 'form_edit', ware: @ware %>
+<%= render 'form', ware: @ware %>
 
 <%= link_to 'Retour', wares_path %>
