--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -10,7 +10,7 @@
 }
 
 .loginScreen {
-  margin-top: 5%;
+  margin-top: 10%;
   text-align: center;
 }
 
@@ -46,8 +46,12 @@
   display: -webkit-box;
 }
 
+.smallerLabel {
+  font-size: 0.9em;
+}
+
 .time-picker {
-  width: 45%;
+  width: 47%;
   margin-right: 1em;
 }
 
