--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -31,15 +31,9 @@
         <%= form.text_field :quotation_id, class: "form-control" %>
       </div>
 
-
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
-        <%= form.label t('Hourly rate') %>
-        <%= form.text_field :hourly_rate, class: "form-control" %>
-      </div>
-
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
-        <%= form.label t('Coefficient') %>
-        <%= form.text_field :coefficient, class: "form-control" %>
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Status') %>
+        <%= form.select(:status, Service.statuses.keys {|status| [status.value, status.value]}, {}, {class: 'form-control'}) %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
@@ -53,13 +47,18 @@
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Duration') %>
         <div class="picker-container">
-          <%= form.time_select :duration, {}, class: "time-picker form-control" %>
+          <%= form.time_select :duration, {default: {hour: 1, min: 0}}, class: "time-picker form-control" %>
         </div>
       </div>
 
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Status') %>
-        <%= form.select(:status, Service.statuses.keys {|status| [status.value, status.value]}, {}, {class: 'form-control'}) %>
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
+        <%= form.label t('Hourly rate') ,class: "smallerLabel"%>
+        <%= form.text_field :hourly_rate, class: "form-control" %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
+        <%= form.label t('Coefficient')%>
+        <%= form.text_field :coefficient, class: "form-control" %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
