--- a/app/views/services/edit.html.erb
+++ b/app/views/services/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Editing Service</h1>
+<h3>Edition Prestation</h3>
 
-<%= render 'form_edit', service: @service %>
+<%= render 'form', service: @service %>
 
 <%= link_to 'Retour', services_path %>
