--- a/app/views/wares/_form.html.erb
+++ b/app/views/wares/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @ware, local: true, class: 'form-group') do |form| %>
+<%= form_with(model: @ware, local: true) do |form| %>
   <div class="form">
     <div class="row">
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
@@ -43,7 +43,7 @@
       </div>
 
 
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
         <%= form.label t('Quantity') %>
         <%= form.number_field :quantity, class: "form-control" %>
       </div>
@@ -53,7 +53,7 @@
         <%= form.text_field :margin, class: "form-control" %>
       </div>
 
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Unit price') %>
         <%= form.text_field :unit_price, class: "form-control" %>
       </div>
