Clickable row/links

--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Project</h1>
+<h3>Edition Projet</h3>
 
 <%= render 'form', project: @project %>
 
-<%= link_to 'Show', @project %> |
-<%= link_to 'Retour', projects_path %>
+<%= link_to 'Retour', project_path %>
