--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,57 +1,49 @@
-<%= form_with(model: project, local: true) do |form| %>
-  <% if project.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
+<%= form_with(model: @project, local: true) do |form| %>
+  <div class="form">
+    <div class="row">
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Name') %>
+        <%= form.text_field :name, class: "form-control" %>
+      </div>
 
-      <ul>
-      <% project.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Invoice') %>
+        <%= form.text_field :invoice_id, class: "form-control" %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Quotation')%>
+        <%= form.text_field :quotation_id, class: "form-control" %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Customer') %>
+        <%= form.select(:customer_id, Customer.all.collect {|customer| [customer.name, customer.id]}, {:include_blank => true}, {class: 'form-control'}) %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Status') %>
+        <%= form.select(:status, Project.statuses.keys{|status| [status.value,status.value]}, {}, {class: 'form-control'})%>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Wielding') %>
+        <%= form.number_field :wielding, class: "form-control" %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Machining') %>
+        <%= form.number_field :machining, class: "form-control" %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Karcher') %>
+        <%= form.number_field :karcher, class: "form-control" %>
+      </div>
+
+      <div class="actions col-xs-10 col-sm-4 col-md-4 col-lg-2 createButton">
+        <%= form.submit t('Create'), :class => "btn btn-dark form-group" %>
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :invoice_id %>
-    <%= form.text_field :invoice_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :quotation_id %>
-    <%= form.text_field :quotation_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :customer_id %>
-    <%= form.text_field :customer_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :status %>
-    <%= form.number_field :status %>
-  </div>
-
-  <div class="field">
-    <%= form.label :wielding %>
-    <%= form.number_field :wielding %>
-  </div>
-
-  <div class="field">
-    <%= form.label :machining %>
-    <%= form.number_field :machining %>
-  </div>
-
-  <div class="field">
-    <%= form.label :karcher %>
-    <%= form.number_field :karcher %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
   </div>
 <% end %>
