--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,39 +1,49 @@
-<h1>Projects</h1>
+<h2><%= t('Projects') %></h2>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Invoice</th>
-      <th>Quotation</th>
-      <th>Customer</th>
-      <th>Status</th>
-      <th>Wielding</th>
-      <th>Machining</th>
-      <th>Karcher</th>
-      <th colspan="3"></th>
-    </tr>
+<%= render 'projects/new' %>
+
+<h5>Listing</h5>
+
+<table class="table table-hover table-striped">
+  <thead class=thead-dark>
+  <tr>
+    <th><%= t('Name') %></th>
+    <th><%= t('Invoice') %></th>
+    <th><%= t('Quotation') %></th>
+    <th><%= t('Customer') %></th>
+    <th><%= t('Status') %></th>
+    <th><%= t('Wielding') %></th>
+    <th><%= t('Machining') %></th>
+    <th><%= t('Karcher') %></th>
+    <th colspan="3"></th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.name %></td>
-        <td><%= project.invoice %></td>
-        <td><%= project.quotation %></td>
-        <td><%= project.customer %></td>
-        <td><%= project.status %></td>
-        <td><%= project.wielding %></td>
-        <td><%= project.machining %></td>
-        <td><%= project.karcher %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <% @projects.each do |project| %>
+    <tr data-link="<%= edit_project_path project %>">
+      <td><%= project.name %></td>
+      <td><%= project.invoice %></td>
+      <td><%= project.quotation %></td>
+      <td>
+        <%= if project.customer
+              project.customer.name
+            end
+        %>
+      </td>
+      <td><%= project.status %></td>
+      <td><%= project.wielding %></td>
+      <td><%= project.machining %></td>
+      <td><%= project.karcher %></td>
+      <td>
+        <button type="button" class="close" aria-label="Close">
+          <span aria-hidden="true">
+            <%= link_to 'X', project, method: :delete, data: {confirm: 'Are you sure?'} %>
+          </span>
+        </button>
+      </td>
+    </tr>
+  <% end %>
   </tbody>
 </table>
-
 <br>
-
-<%= link_to 'New Project', new_project_path %>
