--- a/app/views/wares/index.html.erb
+++ b/app/views/wares/index.html.erb
@@ -1,9 +1,25 @@
-
 <h2><%= t('Wares') %></h2>
 
 <%= render 'wares/new' %>
 
+<hr>
+
 <h5>Listing</h5>
+
+<%= search_form_for @search do |form| %>
+  <div class="form">
+    <div class="row">
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Project') %>
+        <%= form.collection_select :project_id_eq, Project.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+      </div>
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Customer') %>
+        <%= form.collection_select :customer_id_eq, Customer.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+      </div>
+    </div>
+<% end %>
 
 <table class="table table-hover table-striped">
   <thead class=thead-dark>
@@ -55,7 +71,7 @@
       <td><%= ware.total_cost %></td>
       <td>
         <button type="button" class="close" aria-label="Close">
-            <%= link_to 'X', ware, method: :delete, data: {confirm: 'Are you sure?'} %>
+          <%= link_to 'X', ware, method: :delete, data: {confirm: 'Are you sure?'} %>
         </button>
       </td>
     </tr>
@@ -63,4 +79,3 @@
   </tbody>
 </table>
 <br>
-
