--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,6 +4,26 @@
 
 <h5>Listing</h5>
 
+<%= search_form_for @search do |form| %>
+  <div class="form">
+    <div class="row">
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Project') %>
+        <%= form.collection_select :id_eq, Project.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+      </div>
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Customer') %>
+        <%= form.collection_select :customer_id_eq, Customer.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+      </div>
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Status') %>
+        <%= form.select :status_eq, Project.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+      </div>
+    </div>
+  </div>
+<% end %>
+
 <table class="table table-hover table-striped">
   <thead class=thead-dark>
   <tr>
