--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @service, local: true) do |form| %>
+<%= form_with(model: @service, local: true, id: "servicesForm") do |form| %>
   <div class="form">
     <div class="row">
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
@@ -52,23 +52,23 @@
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
-        <%= form.label t('Hourly rate') ,class: "smallerLabel"%>
+        <%= form.label t('Hourly rate'), class: "smallerLabel" %>
         <%= form.text_field :hourly_rate, class: "form-control" %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
-        <%= form.label t('Coefficient')%>
+        <%= form.label t('Coefficient') %>
         <%= form.text_field :coefficient, class: "form-control" %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
         <%= form.label t('TVA rate') %>
-        <%= form.text_field :tva_rate, class: "form-control" %>
+        <%= form.text_field :tva_rate, class: "form-control", id: "tva_rate_s" %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
         <%= form.label t('Total cost') %>
-        <%= form.text_field :total_cost, class: "form-control" %>
+        <%= form.text_field :total_cost, class: "form-control" , id: "total_cost_s" %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2 createButton">
