--- a/app/views/wares/_form.html.erb
+++ b/app/views/wares/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @ware, local: true) do |form| %>
+<%= form_with(model: @ware, local: true, id: 'waresForm') do |form| %>
   <div class="form">
     <div class="row">
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
@@ -45,7 +45,7 @@
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
         <%= form.label t('Quantity') %>
-        <%= form.number_field :quantity, class: "form-control" %>
+        <%= form.text_field :quantity, class: "form-control" %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
