--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,7 +1,24 @@
 @import "bootstrap";
 
+$gray-base: #3b4250 !default;
+$gray-darker:            lighten($gray-base, 13.5%) !default; // #222
+$gray-dark:              lighten($gray-base, 20%) !default;   // #333
+$gray:                   lighten($gray-base, 33.5%) !default; // #555
+$gray-light:             lighten($gray-base, 46.7%) !default; // #777
+$gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
+
+$brand-primary:         darken(#428bca, 6.5%) !default; // #337ab7
+$brand-success:         #5cb85c !default;
+$brand-info:            #5bc0de !default;
+$brand-warning:         #f0ad4e !default;
+$brand-danger:          #d9534f !default;
+
 .navbar {
   margin-bottom: 1em;
+}
+
+body {
+  background-color: #f5f5f5;
 }
 
 .body {
@@ -17,10 +34,6 @@
 #notice {
   text-align: center;
   position: absolute;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
   width: 20%
 }
 
@@ -64,7 +77,24 @@
 }
 
 .table {
-  max-width: 100%;
-  overflow-x: auto;
-  display: block;
+  margin-top: 1%;
+  box-shadow: 10px 0px 40px 2px rgba(0, 0, 0, 0.37);
+  -webkit-box-shadow: 10px 0px 40px 2px rgba(0, 0, 0, 0.37);
+  //max-width: 100%;
+  //overflow-x: auto;
+  //display: block;
+}
+
+//.table-striped>tbody>tr:nth-child(odd)>td,
+//.table-striped>tbody>tr:nth-child(odd)>th {
+//  background-color: rgba(0, 139, 243, 0.08); // Choose your own color here
+//}
+
+h2 {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.listing {
+
 }
