--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,40 +1,38 @@
 @import "bootstrap";
 
-$gray-base: #3b4250 !default;
-$gray-darker:            lighten($gray-base, 13.5%) !default; // #222
-$gray-dark:              lighten($gray-base, 20%) !default;   // #333
-$gray:                   lighten($gray-base, 33.5%) !default; // #555
-$gray-light:             lighten($gray-base, 46.7%) !default; // #777
-$gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
-
-$brand-primary:         darken(#428bca, 6.5%) !default; // #337ab7
-$brand-success:         #5cb85c !default;
-$brand-info:            #5bc0de !default;
-$brand-warning:         #f0ad4e !default;
-$brand-danger:          #d9534f !default;
-
 .navbar {
   margin-bottom: 1em;
-}
-
-body {
-  background-color: #f5f5f5;
 }
 
 .body {
   max-width: 98%;
   margin: auto;
+
+  h2 {
+    text-align: center;
+    text-transform: uppercase;
+    position: absolute;
+    width: 100%;
+  }
 }
 
 .loginScreen {
   margin-top: 10%;
   text-align: center;
+
+  h2 {
+    text-align: center;
+    text-transform: uppercase;
+    position: relative;
+    width: 100%;
+  }
 }
 
 #notice {
   text-align: center;
   position: absolute;
-  width: 20%
+  width: 20%;
+  margin-left: 78%;
 }
 
 .form-control {
@@ -83,13 +81,12 @@ body {
 
 }
 
-h2 {
-  text-align: center;
-  text-transform: uppercase;
+.nav-item {
+  z-index: 9;
 }
 
-.listing {
-
+.tab-content {
+  margin-top: 1%;
 }
 
 .invoice {
@@ -112,6 +109,7 @@ h2 {
   q, blockquote {
     quotes: none;
   }
+
   q:before, q:after, blockquote:before, blockquote:after {
     content: "";
     content: none;
@@ -154,29 +152,35 @@ h2 {
     border-bottom: 1px solid #ddd;
     height: 115px;
   }
+
   #memo .logo {
     float: left;
     margin-right: 20px;
   }
+
   #memo .logo img {
     width: 150px;
     height: 100px;
   }
+
   #memo .company-info {
     float: right;
     text-align: right;
   }
+
   #memo .company-info > div:first-child {
     line-height: 1em;
     font-weight: bold;
     font-size: 22px;
     color: #B32C39;
   }
+
   #memo .company-info span {
     font-size: 11px;
     display: inline-block;
     min-width: 20px;
   }
+
   #memo:after {
     content: '';
     display: block;
@@ -187,11 +191,13 @@ h2 {
     font-weight: bold;
     margin: 30px 0;
   }
+
   #invoice-title-number span {
     line-height: 0.88em;
     display: inline-block;
     min-width: 20px;
   }
+
   #invoice-title-number #title {
     text-transform: uppercase;
     padding: 0px 2px 0px 60px;
@@ -199,6 +205,7 @@ h2 {
     background: #F4846F;
     color: white;
   }
+
   #invoice-title-number #number {
     margin-left: 10px;
     font-size: 35px;
@@ -211,14 +218,17 @@ h2 {
     margin-left: 60px;
     min-width: 220px;
   }
+
   #client-info > div {
     margin-bottom: 3px;
     min-width: 20px;
   }
+
   #client-info span {
     display: block;
     min-width: 20px;
   }
+
   #client-info > span {
     text-transform: uppercase;
   }
@@ -226,6 +236,7 @@ h2 {
   table {
     table-layout: fixed;
   }
+
   table th, table td {
     vertical-align: top;
     word-break: keep-all;
@@ -235,16 +246,19 @@ h2 {
   #items {
     margin: 35px 30px 0 30px;
   }
+
   #items .first-cell, #items table th:first-child, #items table td:first-child {
     width: 40px !important;
     padding-left: 0 !important;
     padding-right: 0 !important;
     text-align: right;
   }
+
   #items table {
     border-collapse: separate;
     width: 100%;
   }
+
   #items table th {
     font-weight: bold;
     padding: 5px 8px;
@@ -253,18 +267,22 @@ h2 {
     color: white;
     text-transform: uppercase;
   }
+
   #items table th:nth-child(2) {
     width: 30%;
     text-align: left;
   }
+
   #items table th:last-child {
     text-align: right;
   }
+
   #items table td {
     padding: 9px 8px;
     text-align: right;
     border-bottom: 1px solid #ddd;
   }
+
   #items table td:nth-child(2) {
     text-align: left;
   }
@@ -273,19 +291,23 @@ h2 {
     margin: 25px 30px 0 0;
     background: url("total-stripe-firebrick.png") right bottom no-repeat;
   }
+
   #sums table {
     float: right;
   }
+
   #sums table tr th, #sums table tr td {
     min-width: 100px;
     padding: 9px 8px;
     text-align: right;
   }
+
   #sums table tr th {
     font-weight: bold;
     text-align: left;
     padding-right: 35px;
   }
+
   #sums table tr td.last {
     min-width: 0 !important;
     max-width: 0 !important;
@@ -293,16 +315,20 @@ h2 {
     padding: 0 !important;
     border: none !important;
   }
+
   #sums table tr.amount-total th {
     text-transform: uppercase;
   }
+
   #sums table tr.amount-total th, #sums table tr.amount-total td {
     font-size: 15px;
     font-weight: bold;
   }
+
   #sums table tr:last-child th {
     text-transform: uppercase;
   }
+
   #sums table tr:last-child th, #sums table tr:last-child td {
     font-size: 15px;
     font-weight: bold;
@@ -313,18 +339,22 @@ h2 {
     float: left;
     margin: 50px 40px 0 60px;
   }
+
   #invoice-info > div > span {
     display: inline-block;
     min-width: 20px;
     min-height: 18px;
     margin-bottom: 3px;
   }
+
   #invoice-info > div > span:first-child {
     color: black;
   }
+
   #invoice-info > div > span:last-child {
     color: #aaa;
   }
+
   #invoice-info:after {
     content: '';
     display: block;
@@ -335,11 +365,13 @@ h2 {
     float: left;
     margin-top: 50px;
   }
+
   #terms .notes {
     min-height: 30px;
     min-width: 50px;
     color: #B32C39;
   }
+
   #terms .payment-info div {
     margin-bottom: 3px;
     min-width: 20px;
