--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,44 +1,45 @@
-<%= form_with(model: customer, local: true) do |form| %>
+<%= form_with(model: customer, local: true, html: {autocomplete: 'off'}) do |form| %>
+  <input autocomplete="false" name="hidden" type="text" style="display:none;">
   <div class="form">
     <div class="row">
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Name') %>
-        <%= form.text_field :name , class: "form-control" %>
+        <%= form.text_field :name, class: "form-control", autocomplete: 'nope' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Mail') %>
-        <%= form.text_field :mail , class: "form-control" %>
+        <%= form.text_field :mail, class: "form-control", autocomplete: 'nope' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('TVA record') %>
-        <%= form.number_field :tva_record , class: "form-control" %>
+        <%= form.text_field :tva_record, class: "form-control", autocomplete: 'nope' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Street') %>
-        <%= form.text_field :street , class: "form-control" %>
+        <%= form.text_field :street, class: "form-control", autocomplete: 'nope' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Number') %>
-        <%= form.number_field :number , class: "form-control" %>
+        <%= form.number_field :number, class: "form-control", autocomplete: 'nope' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Cp') %>
-        <%= form.number_field :cp , class: "form-control" %>
+        <%= form.number_field :cp, class: "form-control", autocomplete: 'nope' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Locality') %>
-        <%= form.text_field :locality , class: "form-control" %>
+        <%= form.text_field :locality, class: "form-control", autocomplete: 'nope' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Country') %>
-        <%= form.text_field :country , class: "form-control" %>
+        <%= form.text_field :country, value:"Belgique", class: "form-control", autocomplete: 'nope' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2 createButton">
