--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,46 +1,59 @@
 <h2>Clients</h2>
 
-<%= render 'customers/new' %>
 
-<hr>
+<ul class="nav nav-tabs" role="tablist">
+  <li class="nav-item active">
+    <a class="nav-link active" data-toggle="tab" href="#listing" role="tab">Listing</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" data-toggle="tab" href="#new" role="tab">Nouveau client</a>
+  </li>
+</ul>
 
-<h5>Listing</h5>
 
-<table class="table table-hover table-striped">
-  <thead class=thead-dark>
-    <tr>
-      <th><%= t('Name') %></th>
-      <th><%= t('Mail') %></th>
-      <th><%= t('TVA record') %></th>
-      <th><%= t('Street') %></th>
-      <th><%= t('Number') %></th>
-      <th><%= t('Cp') %></th>
-      <th><%= t('Locality') %></th>
-      <th><%= t('Country') %></th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="tab-content">
+  <div class="tab-pane fade show active" id="listing">
+    <table class="table table-hover table-striped">
+      <thead class=thead-dark>
+      <tr>
+        <th><%= t('Name') %></th>
+        <th><%= t('Mail') %></th>
+        <th><%= t('TVA record') %></th>
+        <th><%= t('Street') %></th>
+        <th><%= t('Number') %></th>
+        <th><%= t('Cp') %></th>
+        <th><%= t('Locality') %></th>
+        <th><%= t('Country') %></th>
+        <th colspan="3"></th>
+      </tr>
+      </thead>
 
-  <tbody>
-    <% @customers.each do |customer| %>
-    <tr data-link="<%= edit_customer_path customer %>">
-        <td><%= customer.name %></td>
-        <td><%= customer.mail %></td>
-        <td><%= customer.tva_record %></td>
-        <td><%= customer.street %></td>
-        <td><%= customer.number %></td>
-        <td><%= customer.cp %></td>
-        <td><%= customer.locality %></td>
-        <td><%= customer.country %></td>
-        <td>
-          <button type="button" class="close" aria-label="Close">
+      <tbody>
+      <% @customers.each do |customer| %>
+        <tr data-link="<%= edit_customer_path customer %>">
+          <td><%= customer.name %></td>
+          <td><%= customer.mail %></td>
+          <td><%= customer.tva_record %></td>
+          <td><%= customer.street %></td>
+          <td><%= customer.number %></td>
+          <td><%= customer.cp %></td>
+          <td><%= customer.locality %></td>
+          <td><%= customer.country %></td>
+          <td>
+            <button type="button" class="close" aria-label="Close">
           <span aria-hidden="true">
             <%= link_to 'X', customer, method: :delete, data: {confirm: 'Are you sure?'} %>
           </span>
-          </button>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<br>
+            </button>
+          </td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+    <br>
+
+  </div>
+  <div class="tab-pane fade" id="new">
+    <%= render 'customers/new' %>
+  </div>
+</div>
