--- a/app/views/projects/_show.html.erb
+++ b/app/views/projects/_show.html.erb
@@ -1,122 +1,128 @@
 <p id="notice"><%= notice %></p>
 
-<h5>Marchandises</h5>
+<ul class="nav nav-tabs" role="tablist">
+  <li class="nav-item active">
+    <a class="nav-link active" data-toggle="tab" href="#edit" role="tab">Edition projet</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" data-toggle="tab" href="#wares" role="tab">Marchandises</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" data-toggle="tab" href="#services" role="tab">Prestations</a>
+  </li>
+</ul>
 
-<table class="table table-hover table-striped">
-  <thead class=thead-dark>
-  <tr>
-    <th><%= t('Invoice') %></th>
-    <th><%= t('Customer') %></th>
-    <th><%= t('Quotation') %></th>
-    <th><%= t('Name') %></th>
-    <th><%= t('Comment') %></th>
-    <th><%= t('Status') %></th>
-    <th><%= t('Provider discount') %></th>
-    <th><%= t('Margin') %></th>
-    <th><%= t('Quantity') %></th>
-    <th><%= t('Unit price') %></th>
-    <th><%= t('TVA rate') %></th>
-    <th><%= t('Total cost') %></th>
-    <th></th>
-  </tr>
-  </thead>
 
-  <tbody>
-  <% @project.wares.each do |ware| %>
-    <tr data-link="<%= edit_ware_path ware %>">
-      <td><%= ware.invoice %></td>
-      <td>
-        <%= if ware.customer
-              ware.customer.name
-            elsif ware.project
-              ware.project.customer.name
-            end
-        %>
-      </td>
-      <td><%= ware.quotation %></td>
-      <td><%= ware.name %></td>
-      <td><%= ware.comment %></td>
-      <td><%= ware.status %></td>
-      <td><%= ware.provider_discount %></td>
-      <td><%= ware.margin %></td>
-      <td><%= ware.quantity %></td>
-      <td><%= ware.unit_price %></td>
-      <td><%= ware.tva_rate %></td>
-      <td><%= ware.total_cost %></td>
-      <td>
-        <button type="button" class="close" aria-label="Close">
-          <%= link_to 'X', ware, method: :delete, data: {confirm: 'Are you sure?'} %>
-        </button>
-      </td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
-<br>
+<div class="tab-content">
+  <div class="tab-pane fade show active" id="edit">
+    <%= render 'form', project: @project %>
+  </div>
+  <div class="tab-pane fade" id="wares">
 
-<hr>
+    <h5>Marchandises</h5>
 
-<h5>Services</h5>
+    <table class="table table-hover table-striped ">
+      <thead class=thead-dark>
+      <tr>
+        <th><%= t('Project') %></th>
+        <th><%= t('Customer') %></th>
+        <th><%= t('Ware name') %></th>
+        <th><%= t('Provider name') %></th>
+        <th><%= t('Comment') %></th>
+        <th><%= t('Status') %></th>
+        <!--      <th><%#= t('Provider discount') %></th>-->
+        <!--      <th><%#= t('Margin') %></th>-->
+        <!--      <th><%#= t('Quantity') %></th>-->
+        <!--      <th><%#= t('Unit price') %></th>-->
+        <!--      <th><%#= t('TVA rate') %></th>-->
+        <!--      <th><%#= t('Total cost') %></th>-->
+        <th></th>
+      </tr>
+      </thead>
 
-<table class="table table-hover table-striped">
-  <thead class=thead-dark>
-  <tr>
-    <th><%= t('Invoice') %></th>
-    <th><%= t('Customer') %></th>
-    <th><%= t('Quotation') %></th>
-    <th><%= t('Name') %></th>
-    <th><%= t('Comment') %></th>
-    <th><%= t('Status') %></th>
-    <th><%=t('Coefficient')%></th>
-    <th><%=t('Date')%></th>
-    <th><%=t('Hourly rate')%></th>
-    <th><%=t('Duration')%></th>
-    <th><%= t('TVA rate') %></th>
-    <th><%= t('Total cost') %></th>
-    <th></th>
-  </tr>
-  </thead>
+      <tbody>
+      <% @project.wares.each do |ware| %>
+        <tr data-link="<%= edit_ware_path ware %>">
+          <td>
+            <%= if ware.project
+                  link_to '#' + ware.project.id.to_s, edit_project_path(ware.project.id)
+                end
+            %>
+          </td>
+          <td>
+            <%= if ware.customer
+                  ware.customer.name
+                elsif ware.project
+                  ware.project.customer.name
+                end
+            %>
+          </td>
+          <td><%= ware.ware_name %></td>
+          <td><%= ware.provider_name %></td>
+          <td><%= ware.comment %></td>
+          <td><%= ware.status %></td>
+          <!--        <td><%#= ware.provider_discount %></td>-->
+          <!--        <td><%#= ware.margin %></td>-->
+          <!--        <td><%#= ware.quantity %></td>-->
+          <!--        <td><%#= ware.unit_price %></td>-->
+          <!--        <td><%#= ware.tva_rate %></td>-->
+          <!--        <td><%#= ware.total_cost %></td>-->
+          <td>
+            <button type="button" class="close" aria-label="Close">
+              <%= link_to 'X', ware, method: :delete, data: {confirm: 'Are you sure?'} %>
+            </button>
+          </td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+    <br>
+  </div>
+  <div class="tab-pane fade" id="services">
+    <h5>Services</h5>
+    <table class="table table-hover table-striped">
+      <thead class=thead-dark>
+      <tr>
+        <th><%= t('Project') %></th>
+        <th><%= t('Name') %></th>
+        <th><%= t('Comment') %></th>
+        <th><%= t('Status') %></th>
+        <th><%= t('Date') %></th>
+        <th><%= t('Hourly rate') %></th>
+        <th><%= t('Duration') %></th>
+        <th><%= t('TVA rate') %></th>
+        <th><%= t('Total cost') %></th>
+        <th></th>
+      </tr>
+      </thead>
 
-  <tbody>
-  <% @project.services.each do |service| %>
-    <tr data-link="<%= edit_service_path service %>">
-      <td>
-        <%= if service.invoice
-              link_to '#' + service.invoice.id.to_s, invoice_path(service.invoice.id)
-            end
-        %>
-      </td>
-      <td>
-        <%= if service.customer
-              service.customer.name
-            elsif service.project.customer
-              service.project.customer.name
-            end
-        %>
-      </td>
-      <td>
-        <%= if service.quotation
-              link_to '#' + service.quotation.id.to_s, quotation_path(service.quotation.id)
-            end
-        %>
-      </td>
-      <td><%= service.name %></td>
-      <td><%= service.comment %></td>
-      <td><%= service.status %></td>
-      <td><%= service.coefficient %></td>
-      <td><%= service.date %></td>
-      <td><%= service.hourly_rate %></td>
-      <td><%= service.duration.strftime('%H:%M') %></td>
-      <td><%= service.tva_rate %></td>
-      <td><%= service.total_cost %></td>
-      <td>
-        <button type="button" class="close" aria-label="Close">
+      <tbody>
+      <% @project.services.each do |service| %>
+        <tr data-link="<%= edit_service_path service %>">
+          <td>
+            <%= if service.project
+                  link_to '#' + service.project.id.to_s, project_path(service.project.id)
+                end
+            %>
+          </td>
+          <td><%= service.name %></td>
+          <td><%= service.comment %></td>
+          <td><%= service.status %></td>
+          <td><%= service.date %></td>
+          <td><%= service.hourly_rate %></td>
+          <td><%= service.duration.strftime('%H:%M') %></td>
+          <td><%= service.tva_rate %></td>
+          <td><%= service.total_cost %></td>
+          <td>
+            <button type="button" class="close" aria-label="Close">
           <span aria-hidden="true">
-            <%= link_to 'X', service, method: :delete, data: {confirm: 'Are you sure?'} %>
+            <%= link_to 'X', service, method: :delete, data: {confirm: 'Êtes-vous certain ?'} %>
           </span>
-        </button>
-      </td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+            </button>
+          </td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
