--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,12 +1,11 @@
-<h3><%= @project.name %> - <%= if @project.customer
-                                 @project.customer.name
-                               end
-%></h3>
-
-<%= render 'form', project: @project %>
-
-<%= link_to 'Retour', url_for(:back) %>
-<hr>
+<h3>
+  <%= @project.name %> - <%= if @project.customer
+                               @project.customer.name
+                             end
+%>
+</h3>
 
 <%= render 'show', project: @project %>
+<%= link_to 'Retour', url_for(:back) %>
+
 
