--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,71 +1,78 @@
 <h2><%= t('Projects') %></h2>
 
-<%= render 'projects/new' %>
+<ul class="nav nav-tabs" role="tablist">
+  <li class="nav-item active">
+    <a class="nav-link active" data-toggle="tab" href="#listing" role="tab">Listing</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" data-toggle="tab" href="#new" role="tab">Nouveau projet</a>
+  </li>
+</ul>
 
-<hr>
-
-<h5>Listing</h5>
-
-<%= search_form_for @search do |form| %>
-  <div class="form">
-    <div class="row">
-
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Project') %>
-        <%= form.collection_select :id_eq, Project.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+<div class="tab-content">
+  <div class="tab-pane fade show active" id="listing">
+    <%= search_form_for @search do |form| %>
+      <div class="form">
+        <div class="row">
+          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+            <%= form.label t('Project') %>
+            <%= form.collection_select :id_eq, Project.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+          </div>
+          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+            <%= form.label t('Customer') %>
+            <%= form.collection_select :customer_id_eq, Customer.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+          </div>
+          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+            <%= form.label t('Status') %>
+            <%= form.select :status_eq, Project.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+          </div>
+        </div>
       </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Customer') %>
-        <%= form.collection_select :customer_id_eq, Customer.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
-      </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Status') %>
-        <%= form.select :status_eq, Project.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
-      </div>
-    </div>
+    <% end %>
+
+    <table class="table table-hover table-striped">
+      <thead class=thead-dark>
+      <tr>
+        <th><%= t('Name') %></th>
+        <th><%= t('Description') %></th>
+        <th><%= t('Customer') %></th>
+        <th><%= t('Status') %></th>
+        <th><%= t('Wielding') %></th>
+        <th><%= t('Machining') %></th>
+        <th><%= t('Karcher') %></th>
+        <th colspan="3"></th>
+      </tr>
+      </thead>
+
+      <tbody>
+      <% @projects.each do |project| %>
+        <tr data-link="<%= edit_project_path project %>">
+          <td><%= project.name %></td>
+          <td><%= project.description %></td>
+          <td>
+            <%= if project.customer
+                  project.customer.name
+                end
+            %>
+          </td>
+          <td><%= project.status %></td>
+          <td><%= project.wielding %></td>
+          <td><%= project.machining %></td>
+          <td><%= project.karcher %></td>
+          <td>
+            <%= link_to project, method: :delete, data: {confirm: 'Are you sure?'} do %>
+              <i class="glyphicon glyphicon-remove">TEST
+              </i>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+    <br>
   </div>
-<% end %>
+  <div class="tab-pane fade" id="new">
+    <%= render 'projects/new' %>
+  </div>
+</div>
 
-<table class="table table-hover table-striped">
-  <thead class=thead-dark>
-  <tr>
-    <th><%= t('Name') %></th>
-    <th><%= t('Invoice') %></th>
-    <th><%= t('Quotation') %></th>
-    <th><%= t('Customer') %></th>
-    <th><%= t('Status') %></th>
-    <th><%= t('Wielding') %></th>
-    <th><%= t('Machining') %></th>
-    <th><%= t('Karcher') %></th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
-
-  <tbody>
-  <% @projects.each do |project| %>
-    <tr data-link="<%= edit_project_path project %>">
-      <td><%= project.name %></td>
-      <td><%= project.invoice %></td>
-      <td><%= project.quotation %></td>
-      <td>
-        <%= if project.customer
-              project.customer.name
-            end
-        %>
-      </td>
-      <td><%= project.status %></td>
-      <td><%= project.wielding %></td>
-      <td><%= project.machining %></td>
-      <td><%= project.karcher %></td>
-      <td>
-        <button type="button" class="close" aria-label="Close">
-          <span aria-hidden="true">
-            <%= link_to 'X', project, method: :delete, data: {confirm: 'Are you sure?'} %>
-          </span>
-        </button>
-      </td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
-<br>
