--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -1,74 +1,54 @@
 <%= form_with(model: @service, local: true, id: "servicesForm") do |form| %>
   <div class="form">
     <div class="row">
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Project') %>
-        <%= form.select(:project_id, Project.all.collect {|project| [project.name.to_s + ' - ' + project.customer.name, project.id]}, {:include_blank => true}, {class: 'form-control'}) %>
-      </div>
-
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Invoice') %>
-        <%= form.text_field :invoice_id, class: "form-control" %>
-      </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Name') %>
-        <%= form.text_field :name, class: "form-control" %>
+        <%= form.text_field :name, class: "form-control", autocomplete: 'nope' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Comment') %>
-        <%= form.text_field :comment, class: "form-control" %>
-      </div>
-
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Customer') %>
-        <%= form.select(:customer_id, Customer.all.collect {|customer| [customer.name, customer.id]}, {:include_blank => true}, {class: 'form-control'}) %>
-      </div>
-
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Quotation') %>
-        <%= form.text_field :quotation_id, class: "form-control" %>
+        <%= form.text_field :comment, class: "form-control", autocomplete: 'nope' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Status') %>
-        <%= form.select(:status, Service.statuses.keys {|status| [status.value, status.value]}, {}, {class: 'form-control'}) %>
+        <%= form.select(:status, Service.statuses.keys {|status| [status.value, status.value]}, {}, {class: 'form-control', autocomplete: 'nope'}) %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Date') %>
         <div class="picker-container">
-          <%= form.date_select :date, {}, class: "date-picker form-control" %>
+          <%= form.date_select :date, {}, class: "date-picker form-control", autocomplete: 'nope' %>
         </div>
       </div>
-
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Duration') %>
         <div class="picker-container">
-          <%= form.time_select :duration, {default: {hour: 1, min: 0}}, class: "time-picker form-control" %>
+          <%= form.time_select :duration, {default: {hour: 1, min: 0}}, class: "time-picker form-control", autocomplete: 'nope' %>
         </div>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
         <%= form.label t('Hourly rate'), class: "smallerLabel" %>
-        <%= form.text_field :hourly_rate, class: "form-control" %>
-      </div>
-
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
-        <%= form.label t('Coefficient') %>
-        <%= form.text_field :coefficient, class: "form-control" %>
+        <%= form.text_field :hourly_rate, class: "form-control", autocomplete: 'nope' , id: 'hourly_rate'%>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
         <%= form.label t('TVA rate') %>
-        <%= form.text_field :tva_rate, class: "form-control", id: "tva_rate_s" %>
+        <%= form.text_field :tva_rate, value: '21', class: "form-control", id: "tva_rate_s", autocomplete: 'nope'%>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
+        <%= form.label t('Gross cost') %>
+        <%= form.text_field :total_gross, class: "form-control", autocomplete: 'nope', id: 'total_gross_s' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
         <%= form.label t('Total cost') %>
-        <%= form.text_field :total_cost, class: "form-control" , id: "total_cost_s" %>
+        <%= form.text_field :total_cost, class: "form-control", id: "total_cost_s", autocomplete: 'nope' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2 createButton">
