--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,99 +1,82 @@
 <h2>Prestations</h2>
 
-<%= render 'services/new' %>
+<ul class="nav nav-tabs" role="tablist">
+  <li class="nav-item active">
+    <a class="nav-link active" data-toggle="tab" href="#listing" role="tab">Listing</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" data-toggle="tab" href="#new" role="tab">Nouvelle prestation</a>
+  </li>
+</ul>
 
-<hr>
+<div class="tab-content">
+  <div class="tab-pane fade show active" id="listing">
+    <%= search_form_for @search do |form| %>
+      <div class="form">
+        <div class="row">
 
-<h5>Listing</h5>
-
-<%= search_form_for @search do |form| %>
-  <div class="form">
-    <div class="row">
-
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Project') %>
-        <%= form.collection_select :project_id_eq, Project.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+            <%= form.label t('Project') %>
+            <%= form.collection_select :project_id_eq, Project.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+          </div>
+          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+            <%= form.label t('Customer') %>
+            <%= form.collection_select :customer_id_or_project_customer_id_eq, Customer.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+          </div>
+          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+            <%= form.label t('Status') %>
+            <%= form.select :status_eq, Service.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+          </div>
+        </div>
       </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Customer') %>
-        <%= form.collection_select :customer_id_or_project_customer_id_eq, Customer.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
-      </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Status') %>
-        <%= form.select :status_eq, Service.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
-      </div>
-    </div>
-  </div>
-<% end %>
+    <% end %>
 
-<table class="table table-hover table-striped">
-  <thead class=thead-dark>
-  <tr>
-    <th><%= t('Project') %></th>
-    <th><%= t('Invoice') %></th>
-    <th><%= t('Customer') %></th>
-    <th><%= t('Quotation') %></th>
-    <th><%= t('Name') %></th>
-    <th><%= t('Comment') %></th>
-    <th><%= t('Status') %></th>
-    <th><%=t('Coefficient')%></th>
-    <th><%=t('Date')%></th>
-    <th><%=t('Hourly rate')%></th>
-    <th><%=t('Duration')%></th>
-    <th><%= t('TVA rate') %></th>
-    <th><%= t('Total cost') %></th>
-    <th></th>
-  </tr>
-  </thead>
+    <table class="table table-hover table-striped">
+      <thead class=thead-dark>
+      <tr>
+        <th><%= t('Project') %></th>
+        <th><%= t('Name') %></th>
+        <th><%= t('Comment') %></th>
+        <th><%= t('Status') %></th>
+        <th><%= t('Date') %></th>
+        <th><%= t('Hourly rate') %></th>
+        <th><%= t('Duration') %></th>
+        <th><%= t('TVA rate') %></th>
+        <th><%= t('Total cost') %></th>
+        <th></th>
+      </tr>
+      </thead>
 
-  <tbody>
-  <% @services.each do |service| %>
-    <tr data-link="<%= edit_service_path service %>">
-      <td>
-        <%= if service.project
-              link_to '#' + service.project.id.to_s, project_path(service.project.id)
-            end
-        %>
-      </td>
-      <td>
-        <%= if service.invoice
-              link_to '#' + service.invoice.id.to_s, invoice_path(service.invoice.id)
-            end
-        %>
-      </td>
-      <td>
-        <%= if service.customer
-              service.customer.name
-            elsif service.project
-              service.project.customer.name
-            end
-        %>
-      </td>
-      <td>
-        <%= if service.quotation
-              link_to '#' + service.quotation.id.to_s, quotation_path(service.quotation.id)
-            end
-        %>
-      </td>
-      <td><%= service.name %></td>
-      <td><%= service.comment %></td>
-      <td><%= service.status %></td>
-      <td><%= service.coefficient %></td>
-      <td><%= service.date %></td>
-      <td><%= service.hourly_rate %></td>
-      <td><%= service.duration.strftime('%H:%M') %></td>
-      <td><%= service.tva_rate %></td>
-      <td><%= service.total_cost %></td>
-      <td>
-        <button type="button" class="close" aria-label="Close">
+      <tbody>
+      <% @services.each do |service| %>
+        <tr data-link="<%= edit_service_path service %>">
+          <td>
+            <%= if service.project
+                  link_to '#' + service.project.id.to_s, project_path(service.project.id)
+                end
+            %>
+          </td>
+          <td><%= service.name %></td>
+          <td><%= service.comment %></td>
+          <td><%= service.status %></td>
+          <td><%= service.date %></td>
+          <td><%= service.hourly_rate %></td>
+          <td><%= service.duration.strftime('%H:%M') %></td>
+          <td><%= service.tva_rate %></td>
+          <td><%= service.total_cost %></td>
+          <td>
+            <button type="button" class="close" aria-label="Close">
           <span aria-hidden="true">
-            <%= link_to 'X', service, method: :delete, data: {confirm: 'Are you sure?'} %>
+            <%= link_to 'X', service, method: :delete, data: {confirm: 'Êtes-vous certain ?'} %>
           </span>
-        </button>
-      </td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
-<br>
-
+            </button>
+          </td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="tab-pane fade" id="new">
+    <%= render 'services/new' %>
+  </div>
+</div>
