--- a/app/views/wares/_form.html.erb
+++ b/app/views/wares/_form.html.erb
@@ -1,72 +1,79 @@
-<%= form_with(model: @ware, local: true, id: 'waresForm') do |form| %>
+<%= form_with(model: @ware, local: true, id: 'waresForm', html: {autocomplete: 'off'}) do |form| %>
   <div class="form">
     <div class="row">
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Project') %>
-        <%= form.select(:project_id, Project.all.collect {|project| [project.name.to_s + ' - ' + project.customer.name , project.id]}, {:include_blank => true}, {class: 'form-control'}) %>
+        <%= form.select(:project_id, Project.all.collect {|project| [project.name.to_s + ' - ' + project.customer.name, project.id]}, {:include_blank => true}, {class: 'form-control', autocomplete: 'nope'}) %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Invoice') %>
-        <%= form.text_field :invoice_id, class: "form-control" %>
-      </div>
-
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Name') %>
-        <%= form.text_field :name, class: "form-control" %>
-      </div>
-
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Comment') %>
-        <%= form.text_field :comment, class: "form-control" %>
+        <%= form.label t('Customer') %>
+        <%= form.select(:customer_id, Customer.all.collect {|customer| [customer.name, customer.id]}, {:include_blank => true}, {class: 'form-control', autocomplete: 'nope'}) %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Status') %>
-        <%= form.select(:status, Ware.statuses.keys{|status| [status.value,status.value]}, {}, {class: 'form-control'})%>
+        <%= form.select(:status, Ware.statuses.keys {|status| [status.value, status.value]}, {}, {class: 'form-control', autocomplete: 'nope'}) %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Provider discount')%>
-        <%= form.text_field :provider_discount, class: "form-control" %>
-      </div>
-
-
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Customer') %>
-        <%= form.select(:customer_id, Customer.all.collect {|customer| [customer.name, customer.id]}, {:include_blank => true}, {class: 'form-control'}) %>
+        <%= form.label t('Ware name') %>
+        <%= form.text_field :ware_name, class: "form-control", autocomplete: 'nope' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Quotation')%>
-        <%= form.text_field :quotation_id, class: "form-control" %>
+        <%= form.label t('Comment') %>
+        <%= form.text_field :comment, class: "form-control", autocomplete: 'nope' %>
       </div>
 
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Provider name') %>
+        <%= form.text_field :provider_name, class: "form-control", autocomplete: 'nope' %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Provider invoice') %>
+        <%= form.text_field :provider_invoice, class: "form-control", autocomplete: 'nope' %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
+        <%= form.label t('Unit price') %>
+        <%= form.text_field :unit_price, class: "form-control", autocomplete: 'nope', id: 'unit_price' %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
+        <%= form.label t('Provider discount') %>
+        <%= form.text_field :provider_discount, class: "form-control", autocomplete: 'nope' %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
+        <%= form.label t('Bought price') %>
+        <%= form.text_field :provider_net, class: "form-control", autocomplete: 'nope' %>
+      </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
         <%= form.label t('Quantity') %>
-        <%= form.text_field :quantity, class: "form-control" %>
+        <%= form.text_field :quantity, class: "form-control", autocomplete: 'nope', id: 'quantity' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
         <%= form.label t('Margin') %>
-        <%= form.text_field :margin, class: "form-control" %>
+        <%= form.text_field :margin, class: "form-control", autocomplete: 'nope', id: 'margin' %>
       </div>
-
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Unit price') %>
-        <%= form.text_field :unit_price, class: "form-control" %>
-      </div>
-
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
-        <%= form.label t('TVA rate') %>
-        <%= form.text_field :tva_rate, class: "form-control" %>
+        <%= form.label t('TVA rate') + ' (%)' %>
+        <%= form.text_field :tva_rate, value: '21', class: "form-control", autocomplete: 'nope', id: 'tva_rate' %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
+        <%= form.label t('Gross cost') %>
+        <%= form.text_field :total_gross, class: "form-control", autocomplete: 'nope', id: 'total_gross' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
         <%= form.label t('Total cost') %>
-        <%= form.text_field :total_cost, class: "form-control" %>
+        <%= form.text_field :total_cost, class: "form-control", autocomplete: 'nope', id: 'total_cost' %>
       </div>
 
       <div class="actions col-xs-10 col-sm-4 col-md-4 col-lg-2 createButton">
