--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -149,7 +149,6 @@
   #memo {
     padding-top: 50px;
     margin: 0 110px 0 60px;
-    border-bottom: 1px solid #ddd;
     height: 115px;
   }
 
@@ -204,6 +203,7 @@
     font-size: 50px;
     background: #F4846F;
     color: white;
+    margin-left: 22%;
   }
 
   #invoice-title-number #number {
@@ -234,7 +234,7 @@
   }
 
   table {
-    table-layout: fixed;
+    //table-layout: fixed;
   }
 
   table th, table td {
@@ -248,10 +248,10 @@
   }
 
   #items .first-cell, #items table th:first-child, #items table td:first-child {
-    width: 40px !important;
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-    text-align: right;
+    //width: 40px !important;
+    //padding-left: 0 !important;
+    //padding-right: 0 !important;
+    //text-align: right;
   }
 
   #items table {
@@ -268,10 +268,10 @@
     text-transform: uppercase;
   }
 
-  #items table th:nth-child(2) {
-    width: 30%;
-    text-align: left;
-  }
+  //#items table th:nth-child(2) {
+  //  width: 30%;
+  //  text-align: left;
+  //}
 
   #items table th:last-child {
     text-align: right;
@@ -283,9 +283,9 @@
     border-bottom: 1px solid #ddd;
   }
 
-  #items table td:nth-child(2) {
-    text-align: left;
-  }
+  //#items table td:nth-child(2) {
+  //  text-align: left;
+  //}
 
   #sums {
     margin: 25px 30px 0 0;
