--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,37 +1,37 @@
-<%= form_with(model: invoice, local: true) do |form| %>
-  <% if invoice.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(invoice.errors.count, "error") %> prohibited this invoice from being saved:</h2>
+<%= form_with(model: @invoice, local: true, html: {autocomplete: 'off'}) do |form| %>
+  <div class="form">
+    <div class="row">
 
-      <ul>
-      <% invoice.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Customer') %>
+        <%= form.select(:customer_id, Customer.all.collect {|customer| [customer.name, customer.id]}, {:include_blank => true}, {class: 'form-control'}) %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Status') %>
+        <%= form.select(:status, Invoice.statuses.keys {|status| [status.value, status.value]}, {}, {class: 'form-control', autocomplete: 'nope'}) %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Date') %>
+        <div class="picker-container">
+          <%= form.date_select :date, {}, class: "date-picker form-control", autocomplete: 'nope' %>
+        </div>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Wares') %>
+        <%= form.select(:ware_ids, Ware.where(status: 'A facturer').collect {|ware| [ware.ware_name, ware.id]}, {}, {class: 'form-control', autocomplete: 'nope', :multiple => true}) %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Projects') %>
+        <%= form.select(:project_ids, Project.where(status: 'Terminé').collect {|project| [project.name, project.id]}, {}, {class: 'form-control', autocomplete: 'nope', :multiple => true}) %>
+      </div>
+
+      <div class="actions col-xs-10 col-sm-4 col-md-4 col-lg-2 createButton">
+        <%= form.submit t('Create'), :class => "btn btn-dark form-group" %>
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :payment_id %>
-    <%= form.text_field :payment_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :date %>
-    <%= form.date_select :date %>
-  </div>
-
-  <div class="field">
-    <%= form.label :status %>
-    <%= form.number_field :status %>
-  </div>
-
-  <div class="field">
-    <%= form.label :total %>
-    <%= form.text_field :total %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
   </div>
 <% end %>
