--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,31 +1,74 @@
-<h1>Invoices</h1>
+<h2><%= t('Invoices') %></h2>
 
-<table>
-  <thead>
-    <tr>
-      <th>Payment</th>
-      <th>Date</th>
-      <th>Status</th>
-      <th>Total</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<ul class="nav nav-tabs" role="tablist">
+  <li class="nav-item active">
+    <a class="nav-link active" data-toggle="tab" href="#listing" role="tab">Listing</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" data-toggle="tab" href="#new" role="tab">Nouvelle facture</a>
+  </li>
+</ul>
 
-  <tbody>
-    <% @invoices.each do |invoice| %>
-      <tr>
-        <td><%= invoice.payment %></td>
-        <td><%= invoice.date %></td>
-        <td><%= invoice.status %></td>
-        <td><%= invoice.total %></td>
-        <td><%= link_to 'Show', invoice %></td>
-        <td><%= link_to 'Edit', edit_invoice_path(invoice) %></td>
-        <td><%= link_to 'Destroy', invoice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div class="tab-content">
+  <div class="tab-pane fade show active" id="listing">
+    <%= search_form_for @search do |form| %>
+      <div class="form">
+        <div class="row">
+          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+            <%= form.label t('Project') %>
+            <%= form.collection_select :id_eq, Project.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+          </div>
+          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+            <%= form.label t('Customer') %>
+            <%= form.collection_select :customer_id_eq, Customer.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+          </div>
+          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+            <%= form.label t('Status') %>
+            <%= form.select :status_eq, Invoice.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+          </div>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
 
-<br>
+    <table class="table table-hover table-striped">
+      <thead class=thead-dark>
+      <tr>
+        <th><%= t('Customer') %></th>
+        <th><%= t('Date') %></th>
+        <th><%= t('Status') %></th>
+        <th><%= t('Gross cost').to_s + ' (€)' %></th>
+        <th><%= t('Total').to_s + ' (€)'%></th>
+      </tr>
+      </thead>
 
-<%= link_to 'New Invoice', new_invoice_path %>
+      <tbody>
+      <% @invoices.each do |invoice| %>
+        <tr data-link="<%= edit_invoice_path invoice %>">
+
+          <td>
+            <%= if invoice.customer
+                  invoice.customer.name
+                end
+            %>
+          </td>
+          <td><%= invoice.date %></td>
+          <td><%= invoice.status %></td>
+          <td><%= invoice.total_gross %></td>
+          <td><%= invoice.total %></td>
+          <td>
+            <%= link_to invoice, method: :delete, data: {confirm: 'Are you sure?'} do %>
+              <i class="glyphicon glyphicon-remove">X
+              </i>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+    <br>
+  </div>
+  <div class="tab-pane fade" id="new">
+    <%= render 'invoices/new' %>
+  </div>
+</div>
+
