--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -2,9 +2,9 @@
 
   <div id="container">
     <section id="memo">
-      <div class="logo">
-        <img data-logo="{company_logo}"/>
-      </div>
+<!--      <div class="logo">-->
+<!--        <img data-logo="{company_logo}"/>-->
+<!--      </div>-->
 
       <div class="company-info">
         <div>THOMAS GREDAY</div>
@@ -68,14 +68,13 @@
                 <th><%= t('Unit price') %></th>
                 <th><%= t('TVA rate') %></th>
                 <th><%= t('Total cost') %></th>
-                <th></th>
               </tr>
               </thead>
 
               <tbody>
               <% project.wares.each do |ware| %>
                 <tr data-link="<%= edit_ware_path ware %>">
-                  <td><%= ware.name %></td>
+                  <td><%= ware.ware_name %></td>
                   <td><%= ware.quantity %></td>
                   <td><%= ware.unit_price %></td>
                   <td><%= ware.tva_rate %></td>
@@ -98,7 +97,6 @@
                 <th><%= t('Hourly rate') %></th>
                 <th><%= t('TVA rate') %></th>
                 <th><%= t('Total cost') %></th>
-                <th></th>
               </tr>
               </thead>
 
@@ -144,47 +142,18 @@
       <table class="table table-hover table-striped ">
         <thead class=thead-dark>
         <tr>
-          <th><%= t('Project') %></th>
-          <th><%= t('Invoice') %></th>
-          <th><%= t('Customer') %></th>
-          <th><%= t('Quotation') %></th>
           <th><%= t('Name') %></th>
-          <th><%= t('Comment') %></th>
-          <th><%= t('Status') %></th>
-          <th><%= t('Provider discount') %></th>
-          <th><%= t('Margin') %></th>
           <th><%= t('Quantity') %></th>
           <th><%= t('Unit price') %></th>
           <th><%= t('TVA rate') %></th>
           <th><%= t('Total cost') %></th>
-          <th></th>
         </tr>
         </thead>
 
         <tbody>
         <% @invoice.wares.each do |ware| %>
           <tr data-link="<%= edit_ware_path ware %>">
-            <td>
-              <%= if ware.project
-                    link_to '#' + ware.project.id.to_s, edit_project_path(ware.project.id)
-                  end
-              %>
-            </td>
-            <td><%= ware.invoice %></td>
-            <td>
-              <%= if ware.customer
-                    ware.customer.name
-                  elsif ware.project
-                    ware.project.customer.name
-                  end
-              %>
-            </td>
-            <td><%= ware.quotation %></td>
-            <td><%= ware.name %></td>
-            <td><%= ware.comment %></td>
-            <td><%= ware.status %></td>
-            <td><%= ware.provider_discount %></td>
-            <td><%= ware.margin %></td>
+            <td><%= ware.ware_name %></td>
             <td><%= ware.quantity %></td>
             <td><%= ware.unit_price %></td>
             <td><%= ware.tva_rate %></td>
@@ -238,9 +207,7 @@
       <div>
         <span>{due_date_label}</span> <span>{due_date}</span>
       </div>
-
       <br/>
-
       <div>
         <span>{currency_label}</span> <span>{currency}</span>
       </div>
